Fix spacing issues

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 
 article {
-  margin: 10px 25px;
+  margin: 16px 25px;
   position: relative;
 }
 
